Revert "Fix problem"
This reverts commit a9b58653154e770973db5b8f8b71c612a13edca1.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "lib": ["esnext"],
     "experimentalDecorators": true,
     "types": [
+      "@types/node",
       "@types/google-apps-script"
     ]
   }
